Address more dark mode color issues
- Feature Items background
- Next Steps Copy boxes

--- a/main/src/main/js/launch/src/components/NextSteps/next-steps.css
+++ b/main/src/main/js/launch/src/components/NextSteps/next-steps.css
@@ -1,115 +1,116 @@
 .modal.modal-lg.next-steps {
-    max-height: 90%;
+  max-height: 90%;
 }
 
 .next-steps .title {
-    font-size: 1.8em;
-    font-weight: 500;
-    margin-bottom: 1em;
+  font-size: 1.8em;
+  font-weight: 500;
+  margin-bottom: 1em;
 }
 
 .next-steps p.info {
-    max-width: 600px;
-    text-align: left;
+  max-width: 600px;
+  text-align: left;
 }
 
 .next-steps-wrapper {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 
 .next-steps-code .heading,
 .next-steps-wrapper .heading {
-    margin-bottom: 0.6em;
+  margin-bottom: 0.6em;
 }
 
 .next-steps-code,
 .next-steps-row {
-    display: flex;
-    align-items: center;
-    border: solid 1px rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  border: solid 1px rgba(0, 0, 0, 0.3);
 }
 
 .next-steps-row {
-    padding: 6px;
-    height: 3em;
-    align-items: center;
-    display: flex;
+  padding: 6px;
+  height: 3em;
+  align-items: center;
+  display: flex;
 }
 
 .os-select-opt-row {
-    display: flex;
+  display: flex;
 }
 
 .os-select-opt-col {
 }
 
 span.os-select {
-    cursor: pointer;
-    position: relative;
-    margin-right: 1em;
-    letter-spacing: 1px;
-    color: grey;
+  cursor: pointer;
+  position: relative;
+  margin-right: 1em;
+  letter-spacing: 1px;
+  color: grey;
 }
 
 span.os-select::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    bottom: -3px;
-    left: 0;
-    visibility: hidden;
-    transform: scaleX(0);
-    transition: all 0.3s ease-in-out 0s;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: -3px;
+  left: 0;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
 }
 
 span.os-select:hover::before {
-    visibility: visible;
-    transform: scaleX(1);
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 .light span.os-select.active {
-    color: black;
+  color: black;
 }
 .light span.os-select::before {
-    background-color: #000;
+  background-color: #000;
 }
 .dark span.os-select.active {
-    color: white;
+  color: white;
 }
 .dark span.os-select::before {
-    background-color: white;
+  background-color: white;
 }
 
 .next-steps-row .text {
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
 }
 
 .next-steps-row .icon {
-    flex-shrink: 1;
-    display: flex;
-    align-items: center;
-    height: 100%;
+  flex-shrink: 1;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .next-steps-row .icon a {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 body.light .next-steps-row {
-    color: black;
+  color: black;
 }
 body.light .next-steps-row a {
-    color: var(--theme-dark);
+  color: var(--theme-dark);
 }
 
 body.dark .next-steps-row {
-    color: rgb(169, 183, 198);
+  color: rgb(169, 183, 198);
+  background: var(--theme-dark-card-bg);
 }
 
 body.dark .next-steps-row a {
-    color: rgb(169, 183, 198);
+  color: rgb(169, 183, 198);
 }
